
2001-07-09 v1.00 Tels
 * First release. 
2001-07-13 v1.01 Tels
 * new testsuite from BigInt v1.37, tweaks to it to silence Exporter
 * $class => __PACKAGE__
2001-07-22 v1.02 Tels (never released)
 * removed $class/__PACKAGE__ checks entirely
 * fixed 2 ** something to be more efficient
 * made Bit::Vector a requirement
2001-08-03 v1.03 Tels
 * added tests from MBI v1.40
2001-09-03 v1.04 Tels
 * _as_hex(), _as_bin()
 * tests from MBI 1.42
 * removed default exporting, added empty import()
2001-01-01 v1.05 Tels
 * testsuite from BigInt v1.45

Please send me test-reports, your experiences with this and your ideas - I love
to hear about my work!

Tels <http://bloodgate.com/>